2008-12-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/GridArrangement.java
    (arrange): Fill in missing constraint combinations,
    (arrangeNN): Check for null block,
    (arrangeFF): Likewise,
    (arrangeRF): New method,
    (arrangeRN): Likewise,
    (arrangeNR): Likewise,
    (arrangeRR): Likewise,
    (arrangeFN): Check for null block,
    (arrangeNF): New method,
    * tests/org/jfree/chart/block/junit/GridArrangementTests.java:
    Added various new tests.

2008-11-25  David Gilbert  <david.gilbert@object-refinery.com>

    Bug fix 2201869 by Fawad Halim (with modifications):
    * source/org/jfree/chart/axis/DateAxis.java
    (previousStandardDate): Use new Month constructor,
    (correctTickDateForPosition): New private method,
    (refreshTicksHorizontal): Moved position correction to top of loop,
    (refreshTicksVertical): Likewise,
    * source/org/jfree/data/time/Month.java
    (Month(Date, TimeZone)): Deprecated,
    (Month(Date, TimeZone, Locale)): New constructor,
    * source/org/jfree/data/time/Quarter.java
    (Quarter(Date, TimeZone)): Deprecated,
    (Quarter(Date, TimeZone, Locale)): New constructor,
    * source/org/jfree/data/time/Year.java
    (Year(Date, TimeZone)): Deprecated,
    (Year(Date, TimeZone, Locale)): New constructor.

2008-11-25  David Gilbert  <david.gilbert@object-refinery.com>

    Based on patch 1868749 by Andrew Mickish:
    * source/org/jfree/chart/plot/CategoryPlot.java
    (datasetToDomainAxisMap): Changed from ObjectList to TreeMap,
    (datasetToRangeAxisMap): Likewise,
    (CategoryPlot): Updated initialization of modified fields,
    (mapDatasetToDomainAxis): Delegate to new method,
    (mapDatasetToDomainAxes): New method,
    (checkAxisIndices): New private method,
    (getDomainAxisForDataset): Updated for multiple axis support,
    (mapDatasetToRangeAxis): Delegate to new method,
    (mapDatasetToRangeAxes): New method,